--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
       rel="stylesheet"
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
     />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./sass/index.scss" />
   </head>
   <body>
@@ -53,5 +54,7 @@
     <script src="./js/swiper.js"></script>
     <script type="module" src="./index.js"></script>
     <script src="./js/products.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="./js/swiper.js"></script>
   </body>
 </html>
